--- a/HZSoft.Application/HZSoft.Application.Web/XmlConfig/system.config
+++ b/HZSoft.Application/HZSoft.Application.Web/XmlConfig/system.config
@@ -64,7 +64,7 @@
   <add key="Key" value="lywenkai741852963Lywenkai7418529"/>
   <!--用于微信支付的商户号-->
   <add key="MchId" value="1582948931"/>
-  <add key="Domain2" value="http://wx.lywenkai.com"/>
+  <add key="Domain2" value="http://www.jnlxsm.net"/>
   
   
   <!--用于微信支付的PartnerKey-->
