--- a/HZSoft.Application/HZSoft.Application.Web/XmlConfig/system.config
+++ b/HZSoft.Application/HZSoft.Application.Web/XmlConfig/system.config
@@ -55,18 +55,31 @@
   <add key="AppSecret" value="f8e82f4563d898eb99aa885c9b66d089"/>
   <add key="AppName" value="165通讯"/>
 
-  <!--企协大数据：微信AppId-->
+  <!--济南立新：微信AppId-->
+  <add key="AppID2" value="wx8992efd4c27f5f68"/>
+ <!--济南立新：微信AppSecret-->
+  <add key="AppSecret2" value="0348c8515fc34360a82816229a07ad6f"/>
+  <add key="AppName2" value="利新"/>
+  <!--济南立新：用于微信支付的商户号1578423131限额3000-->
+  <add key="MchId" value="1584394161"/>
+  <!--济南立新：用于微信支付的PartnerKey-->
+  <add key="Key" value="jinanLIXINshangmao0531xxcdfregop"/>
+  <add key="Domain2" value="https://shop.jnlxsm.net"/>
+
+
+  <!--企协大数据：微信AppId--><!--
   <add key="AppID2" value="wx288f944166a4bdc6"/>
-  <!--企协大数据：微信AppSecret-->
+  --><!--企协大数据：微信AppSecret--><!--
   <add key="AppSecret2" value="5b78ddfc97253eba96fdabbcabac47c0"/>
   <add key="AppName2" value="企协大数据"/>
-  <!--用于微信支付的PartnerKey-->
+  --><!--企协大数据：用于微信支付的PartnerKey--><!--
   <add key="Key" value="lywenkai741852963Lywenkai7418529"/>
-  <!--用于微信支付的商户号-->
+  --><!--企协大数据：用于微信支付的商户号--><!--
   <add key="MchId" value="1582948931"/>
-  <add key="Domain2" value="http://www.jnlxsm.net"/>
-  
-  
+  <add key="Domain2" value="https://www.jnlxsm.net"/>-->
+
+
+
   <!--用于微信支付的PartnerKey-->
   <add key="PartnerKey" value=""/>
   <!--用于微信支付的商户号-->
