--- a/HZSoft.Application/HZSoft.Application.Web/packages.config
+++ b/HZSoft.Application/HZSoft.Application.Web/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Alipay.AopSdk" version="2.0.0" targetFramework="net45" />
   <package id="Antlr" version="3.4.1.9004" targetFramework="net45" />
   <package id="DotNetZip" version="1.11.0" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
