济南头条同步修改代码问题 添加host问题，首页的域名 支付回调修改头条host，下架靓号根据id下架 api调用日志url记录

--- a/HZSoft.Application/HZSoft.Application.Web/HZSoft.Application.Web.csproj
+++ b/HZSoft.Application/HZSoft.Application.Web/HZSoft.Application.Web.csproj
@@ -271,8 +271,9 @@
     <Compile Include="Areas\ReportManage\Controllers\ReportDemoController.cs" />
     <Compile Include="Areas\ReportManage\ReportManageAreaRegistration.cs" />
     <Compile Include="Areas\webapp\Controllers\AliPayController.cs" />
-    <Compile Include="Areas\webapp\Controllers\Shop2Controller.cs" />
     <Compile Include="Areas\webapp\Controllers\ShopController.cs" />
+    <Compile Include="Areas\webapp\Controllers\Shop2Controller.cs" />
+    <Compile Include="Areas\webapp\Controllers\Shop0Controller.cs" />
     <Compile Include="Areas\webapp\LXAreaRegistration.cs" />
     <Compile Include="Areas\SystemManage\Controllers\AreaController.cs" />
     <Compile Include="Areas\SystemManage\Controllers\CodeRuleController.cs" />
@@ -1958,19 +1959,25 @@
     <Content Include="Areas\H5\Views\HomePage\mobileinfo.cshtml" />
     <Content Include="Areas\H5\Views\HomePage\mobileorder.cshtml" />
     <Content Include="Areas\H5\Views\HomePage\express.cshtml" />
-    <Content Include="Areas\webapp\Views\Shop\Index.cshtml" />
+    <Content Include="Areas\webapp\Views\Shop0\Index.cshtml" />
     <Content Include="Areas\webapp\Views\Web.config" />
-    <Content Include="Areas\webapp\Views\Shop\Apply.cshtml" />
-    <Content Include="Areas\webapp\Views\Shop\mobileinfo.cshtml" />
-    <Content Include="Areas\webapp\Views\Shop\mobileorder.cshtml" />
-    <Content Include="Areas\webapp\Views\Shop\express.cshtml" />
-    <Content Include="Areas\webapp\Views\Shop\info2.cshtml" />
+    <Content Include="Areas\webapp\Views\Shop0\Apply.cshtml" />
+    <Content Include="Areas\webapp\Views\Shop0\mobileinfo.cshtml" />
+    <Content Include="Areas\webapp\Views\Shop0\mobileorder.cshtml" />
+    <Content Include="Areas\webapp\Views\Shop0\express.cshtml" />
+    <Content Include="Areas\webapp\Views\Shop0\info2.cshtml" />
     <Content Include="Areas\webapp\Views\Shop2\express.cshtml" />
     <Content Include="Areas\webapp\Views\Shop2\Index.cshtml" />
     <Content Include="Areas\webapp\Views\Shop2\info2.cshtml" />
     <Content Include="Areas\webapp\Views\Shop2\mobileinfo.cshtml" />
     <Content Include="Areas\webapp\Views\Shop2\mobileorder.cshtml" />
     <Content Include="Areas\webapp\Views\Shop2\paymentFinish.cshtml" />
+    <Content Include="Areas\webapp\Views\Shop0\paymentFinish.cshtml" />
+    <Content Include="Areas\webapp\Views\Shop\express.cshtml" />
+    <Content Include="Areas\webapp\Views\Shop\Index.cshtml" />
+    <Content Include="Areas\webapp\Views\Shop\info2.cshtml" />
+    <Content Include="Areas\webapp\Views\Shop\mobileinfo.cshtml" />
+    <Content Include="Areas\webapp\Views\Shop\mobileorder.cshtml" />
     <Content Include="Areas\webapp\Views\Shop\paymentFinish.cshtml" />
     <None Include="Properties\PublishProfiles\165.pubxml" />
     <None Include="Properties\PublishProfiles\6.1.pubxml" />
