H5PayData添加支付宝返回form controller支付宝逻辑统一调用接口 shop：济南头条www.jnlxsm.net/webapp/shop/index shop2:广州头条： 先跳转到wl012.rrzwl.com/shop2/index， 再跳转到shop.jnlxsm.net/webapp/shop2/index
views
mobileorder添加支付宝选择alipay

WeiXinHomeController
添加
1.异步回调AliPayNotifyUrl()，
2.同步回调ReturnUrl()
views
添加ReturnUrl同步反馈页面

system.config
配置新的利新支付宝秘钥信息

--- a/HZSoft.Application/HZSoft.Application.Web/HZSoft.Application.Web.csproj
+++ b/HZSoft.Application/HZSoft.Application.Web/HZSoft.Application.Web.csproj
@@ -1979,6 +1979,7 @@
     <Content Include="Areas\webapp\Views\Shop\mobileinfo.cshtml" />
     <Content Include="Areas\webapp\Views\Shop\mobileorder.cshtml" />
     <Content Include="Areas\webapp\Views\Shop\paymentFinish.cshtml" />
+    <Content Include="Areas\WeChatManage\Views\WeiXinHome\ReturnUrl.cshtml" />
     <None Include="Properties\PublishProfiles\165.pubxml" />
     <None Include="Properties\PublishProfiles\6.1.pubxml" />
     <Content Include="Areas\FlowManage\Views\FlowLaunch\Index.cshtml" />
