新商户号配置 可以重复上传，跳过提示重复号码 添加网络搜索

--- a/HZSoft.Application/HZSoft.Application.Web/XmlConfig/system.config
+++ b/HZSoft.Application/HZSoft.Application.Web/XmlConfig/system.config
@@ -58,8 +58,11 @@
   <!--济南立新-->
   <add key="AppID2" value="wx8992efd4c27f5f68"/>
   <add key="AppSecret2" value="0348c8515fc34360a82816229a07ad6f"/>
-  <add key="AppName2" value="利新"/>
-  <add key="MchId" value="1584394161"/>
+  <!--<add key="AppName2" value="号运来卡业"/>
+  <add key="MchId" value="1578423131"/>-->
+  <!--利新通讯 -->
+  <add key="AppName2" value="利新通讯"/>
+  <add key="MchId" value="1592983961"/>
   <add key="Key" value="jinanLIXINshangmao0531xxcdfregop"/>
   <add key="Domain2" value="https://shop.jnlxsm.net"/>
 
