1、H5排序：先按照类别排序，再按照最后一位排序grade,right(Telphone,1) 2、添加生成号单页面HaoDan 3、首页滚动模拟售出号码 4、List页面的生成号单图标

--- a/HZSoft.Application/HZSoft.Application.Web/HZSoft.Application.Web.csproj
+++ b/HZSoft.Application/HZSoft.Application.Web/HZSoft.Application.Web.csproj
@@ -1980,6 +1980,7 @@
     <Content Include="Areas\webapp\Views\Shop\mobileorder.cshtml" />
     <Content Include="Areas\webapp\Views\Shop\paymentFinish.cshtml" />
     <Content Include="Areas\WeChatManage\Views\WeiXinHome\ReturnUrl.cshtml" />
+    <Content Include="Areas\WeChatManage\Views\Liang\HaoDan.cshtml" />
     <None Include="Properties\PublishProfiles\165.pubxml" />
     <None Include="Properties\PublishProfiles\6.1.pubxml" />
     <Content Include="Areas\FlowManage\Views\FlowLaunch\Index.cshtml" />
