1.广州广末再添加两个账户mwd，mwd2 2.jsapi完善代码get获取token，调用统一支付接口，初始化mode和数据库，提交再完善数据库，post跳转会跨域不能HandlerWX2AuthorizeAttribute 3.jsapi页面去掉jweixin，分享才需要，否则页面无法选择地区 4.支付宝，异步调用添加日志，判断金额是否一致再支付

--- a/HZSoft.Application/HZSoft.Application.Web/HZSoft.Application.Web.csproj
+++ b/HZSoft.Application/HZSoft.Application.Web/HZSoft.Application.Web.csproj
@@ -270,6 +270,8 @@
     <Compile Include="Areas\webapp\Controllers\AliPayController.cs" />
     <Compile Include="Areas\webapp\Controllers\ShopController.cs" />
     <Compile Include="Areas\webapp\Controllers\Shop2Controller.cs" />
+    <Compile Include="Areas\webapp\Controllers\mwd2Controller.cs" />
+    <Compile Include="Areas\webapp\Controllers\mwdController.cs" />
     <Compile Include="Areas\webapp\Controllers\Xdd2Controller.cs" />
     <Compile Include="Areas\webapp\Controllers\XddController.cs" />
     <Compile Include="Areas\webapp\LXAreaRegistration.cs" />
@@ -1991,6 +1993,20 @@
     <Content Include="Areas\webapp\Views\Xdd\JsApi.cshtml" />
     <Content Include="Areas\webapp\Views\Shop2\JsApi.cshtml" />
     <Content Include="Areas\webapp\Views\Shop\JsApi.cshtml" />
+    <Content Include="Areas\webapp\Views\mwd\express.cshtml" />
+    <Content Include="Areas\webapp\Views\mwd\Index.cshtml" />
+    <Content Include="Areas\webapp\Views\mwd\info2.cshtml" />
+    <Content Include="Areas\webapp\Views\mwd\JsApi.cshtml" />
+    <Content Include="Areas\webapp\Views\mwd\mobileinfo.cshtml" />
+    <Content Include="Areas\webapp\Views\mwd\mobileorder.cshtml" />
+    <Content Include="Areas\webapp\Views\mwd\paymentFinish.cshtml" />
+    <Content Include="Areas\webapp\Views\mwd2\express.cshtml" />
+    <Content Include="Areas\webapp\Views\mwd2\Index.cshtml" />
+    <Content Include="Areas\webapp\Views\mwd2\info2.cshtml" />
+    <Content Include="Areas\webapp\Views\mwd2\JsApi.cshtml" />
+    <Content Include="Areas\webapp\Views\mwd2\mobileinfo.cshtml" />
+    <Content Include="Areas\webapp\Views\mwd2\mobileorder.cshtml" />
+    <Content Include="Areas\webapp\Views\mwd2\paymentFinish.cshtml" />
     <None Include="Properties\PublishProfiles\165.pubxml" />
     <None Include="Properties\PublishProfiles\6.1.pubxml" />
     <Content Include="Areas\FlowManage\Views\FlowLaunch\Index.cshtml" />
