这个客户连着提交了两个订单，微信付款成功回调的是第一次提交的，我做的规则是同一个人重复提交订单，就把之前未付款的订单给删掉，避免订单重复多余，所以微信回调找不到了第一个订单了 这样的情况算是个意外，都应该是在最新提交的订单上支付的 我再修改下代码吧，不真实删除未付款的老订单，避免出现这样的情况
OrdersService
(DeleteMark <> 1 or PayStatus = 1)
假删除
item.DeleteMark = 1;
db.Update<OrdersEntity>(item);

微信支付回调，没有收到xml返回消息，会不断的重试回调保证通知成功
if (order!=null)添加判断避免异常，不执行返回xml代码
前五次间隔1s，后面11次间隔5s，
17次间隔20分钟，18次6s
19次间隔30分钟，20次5s
21次间隔30分钟，22次4s
23次间隔30分钟，24次4s
24次间隔30分钟，25次30分钟
26次间隔3小时30分钟

添加gm和gm2两个控制器，头条账号

--- a/.gitignore
+++ b/.gitignore
@@ -349,3 +349,4 @@ MigrationBackup/
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
 /HZSoft.Application/HZSoft.Application.Web/Resource
+/HZSoft.Application/HZSoft.Application.Web/App_Data/HZSoftFramework_Base_2016.bak
