济南头条添加2个连接shop.jnlxsm.net:8063 shop.jnlxsm.net:8064

--- a/HZSoft.Application/HZSoft.Application.Web/HZSoft.Application.Web.csproj
+++ b/HZSoft.Application/HZSoft.Application.Web/HZSoft.Application.Web.csproj
@@ -268,8 +268,10 @@
     <Compile Include="Areas\ReportManage\Controllers\ReportDemoController.cs" />
     <Compile Include="Areas\ReportManage\ReportManageAreaRegistration.cs" />
     <Compile Include="Areas\webapp\Controllers\AliPayController.cs" />
-    <Compile Include="Areas\webapp\Controllers\gm2Controller.cs" />
-    <Compile Include="Areas\webapp\Controllers\gmController.cs" />
+    <Compile Include="Areas\webapp\Controllers\jinan2Controller.cs" />
+    <Compile Include="Areas\webapp\Controllers\jinanController.cs" />
+    <Compile Include="Areas\webapp\Controllers\mwd2Controller.cs" />
+    <Compile Include="Areas\webapp\Controllers\mwdController.cs" />
     <Compile Include="Areas\webapp\Controllers\ShopController.cs" />
     <Compile Include="Areas\webapp\Controllers\Shop2Controller.cs" />
     <Compile Include="Areas\webapp\Controllers\Xdd2Controller.cs" />
@@ -335,6 +337,20 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="01_修改日志\log.txt" />
+    <Content Include="Areas\webapp\Views\mwd2\express.cshtml" />
+    <Content Include="Areas\webapp\Views\mwd2\Index.cshtml" />
+    <Content Include="Areas\webapp\Views\mwd2\info2.cshtml" />
+    <Content Include="Areas\webapp\Views\mwd2\JsApi.cshtml" />
+    <Content Include="Areas\webapp\Views\mwd2\mobileinfo.cshtml" />
+    <Content Include="Areas\webapp\Views\mwd2\mobileorder.cshtml" />
+    <Content Include="Areas\webapp\Views\mwd2\paymentFinish.cshtml" />
+    <Content Include="Areas\webapp\Views\mwd\express.cshtml" />
+    <Content Include="Areas\webapp\Views\mwd\Index.cshtml" />
+    <Content Include="Areas\webapp\Views\mwd\info2.cshtml" />
+    <Content Include="Areas\webapp\Views\mwd\JsApi.cshtml" />
+    <Content Include="Areas\webapp\Views\mwd\mobileinfo.cshtml" />
+    <Content Include="Areas\webapp\Views\mwd\mobileorder.cshtml" />
+    <Content Include="Areas\webapp\Views\mwd\paymentFinish.cshtml" />
     <Content Include="assets\image\1585294223_SxcUpg.png" />
     <Content Include="assets\wap\css\iconfont.svg" />
     <Content Include="assets\wap\css\user.css" />
@@ -1993,20 +2009,20 @@
     <Content Include="Areas\webapp\Views\Xdd\JsApi.cshtml" />
     <Content Include="Areas\webapp\Views\Shop2\JsApi.cshtml" />
     <Content Include="Areas\webapp\Views\Shop\JsApi.cshtml" />
-    <Content Include="Areas\webapp\Views\gm\express.cshtml" />
-    <Content Include="Areas\webapp\Views\gm\Index.cshtml" />
-    <Content Include="Areas\webapp\Views\gm\info2.cshtml" />
-    <Content Include="Areas\webapp\Views\gm\JsApi.cshtml" />
-    <Content Include="Areas\webapp\Views\gm\mobileinfo.cshtml" />
-    <Content Include="Areas\webapp\Views\gm\mobileorder.cshtml" />
-    <Content Include="Areas\webapp\Views\gm\paymentFinish.cshtml" />
-    <Content Include="Areas\webapp\Views\gm2\express.cshtml" />
-    <Content Include="Areas\webapp\Views\gm2\Index.cshtml" />
-    <Content Include="Areas\webapp\Views\gm2\info2.cshtml" />
-    <Content Include="Areas\webapp\Views\gm2\JsApi.cshtml" />
-    <Content Include="Areas\webapp\Views\gm2\mobileinfo.cshtml" />
-    <Content Include="Areas\webapp\Views\gm2\mobileorder.cshtml" />
-    <Content Include="Areas\webapp\Views\gm2\paymentFinish.cshtml" />
+    <Content Include="Areas\webapp\Views\jinan2\paymentFinish.cshtml" />
+    <Content Include="Areas\webapp\Views\jinan2\express.cshtml" />
+    <Content Include="Areas\webapp\Views\jinan2\Index.cshtml" />
+    <Content Include="Areas\webapp\Views\jinan2\info2.cshtml" />
+    <Content Include="Areas\webapp\Views\jinan2\JsApi.cshtml" />
+    <Content Include="Areas\webapp\Views\jinan2\mobileinfo.cshtml" />
+    <Content Include="Areas\webapp\Views\jinan2\mobileorder.cshtml" />
+    <Content Include="Areas\webapp\Views\jinan\paymentFinish.cshtml" />
+    <Content Include="Areas\webapp\Views\jinan\express.cshtml" />
+    <Content Include="Areas\webapp\Views\jinan\Index.cshtml" />
+    <Content Include="Areas\webapp\Views\jinan\info2.cshtml" />
+    <Content Include="Areas\webapp\Views\jinan\JsApi.cshtml" />
+    <Content Include="Areas\webapp\Views\jinan\mobileinfo.cshtml" />
+    <Content Include="Areas\webapp\Views\jinan\mobileorder.cshtml" />
     <None Include="Properties\PublishProfiles\165.pubxml" />
     <None Include="Properties\PublishProfiles\6.1.pubxml" />
     <Content Include="Areas\FlowManage\Views\FlowLaunch\Index.cshtml" />
